--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "pg": "^8.7.1",
@@ -52,6 +53,9 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
+  },
+  "engines": {
+    "node": "14.17.6"
   },
   "jest": {
     "moduleFileExtensions": [
